전반적 성능개선 및 리팩토링(#9)

--- a/test/nodejabatest/style.css
+++ b/test/nodejabatest/style.css
@@ -39,6 +39,7 @@ video {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
+  filter: contrast(100.0) brightness(0.3) grayscale(100%);
   z-index: -1;
 }
 
