--- a/fe/grab-front-app/src/Singleplay.css
+++ b/fe/grab-front-app/src/Singleplay.css
@@ -42,30 +42,33 @@
 
 #videoZone {
   position: absolute;
-  /* left: 0px;
-  top: 0px; */
+  left: 0px;
+
+  /* top: 0px; */ 
   clear: both;
-  display: block;
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
   filter: contrast(100.0) brightness(0.3) grayscale(100%);
   z-index: -2;
+
 }
 #canvasZone {
   position: absolute;
-  /* left: 0px;
-  top: 0px; */
+  left: 0px;
+  /* top: 0px; */
+
   clear: both;
-  display: block;
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
   z-index: -1;
+  border: 2.5px solid #ff99ff;
+  border-radius: 10px;
 }
 #gameContainer {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 1000px;
+  height: 100vh;
 }
