--- a/fe/grab-front-app/src/pages/singleplayjoin/SingleplayJoin.css
+++ b/fe/grab-front-app/src/pages/singleplayjoin/SingleplayJoin.css
@@ -2,7 +2,7 @@
     font-family: "Press Start 2P";
     font-style: normal;
     font-weight: normal;
-    src: url("./Fonts/PressStart2P-Regular.ttf") format("truetype"); 
+    src: url("../../Fonts/PressStart2P-Regular.ttf") format("truetype"); 
   }
   body{
     background-color: black
@@ -21,7 +21,7 @@
 
 
 .containerSingleplay {
-    /* width: 100%; 원하는 디자인에 맞게 너비 조정 */
+    width: 100%; /* 원하는 디자인에 맞게 너비 조정 */
     max-width: 1536px; /* 최대 너비를 1536px로 제한 */
     max-height: 864px;
     color: #FF99FF;
@@ -38,37 +38,4 @@
     animation: neon 1s ease infinite;
     -moz-animation: neon 1s ease infinite;
     -webkit-animation: neon 1s ease infinite;
-}
-
-#videoZone {
-  position: absolute;
-  left: 0px;
-
-  /* top: 0px; */ 
-  clear: both;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  filter: contrast(100.0) brightness(0.3) grayscale(100%);
-  z-index: -2;
-
-}
-#canvasZone {
-  position: absolute;
-  left: 0px;
-  /* top: 0px; */
-
-  clear: both;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  z-index: -1;
-  border: 2.5px solid #ff99ff;
-  border-radius: 10px;
-}
-#gameContainer {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
 }
