--- a/fe/grab-front-app/src/util/node.css
+++ b/fe/grab-front-app/src/util/node.css
@@ -2,7 +2,6 @@
   width: 60px;
   height: 60px;
   position: absolute;
-
 display: grid;
 place-items: center;
 }
@@ -25,6 +24,42 @@ background: radial-gradient(circle, rgba(255, 0, 255, 0.5), rgb(255,0,255));
 position: absolute;
 z-index: 1;
 animation: growCircleFill 1s linear;
+}
+
+.judge-perfect {
+width: 60px;
+height: 60px;
+position: absolute;
+z-index: 2;
+display: flex;
+  justify-content: center;
+  align-items: center;
+font-size: large;
+color: white;
+}
+
+.judge-good {
+width: 60px;
+height: 60px;
+position: absolute;
+z-index: 2;
+display: flex;
+  justify-content: center;
+  align-items: center;
+font-size: large;
+color: white;
+}
+
+.judge-bad {
+width: 60px;
+height: 60px;
+position: absolute;
+z-index: 2;
+display: flex;
+  justify-content: center;
+  align-items: center;
+font-size: large;
+color: white;
 }
 
 @keyframes growCircle {
@@ -52,16 +87,6 @@ animation: growCircleFill 1s linear;
   }
 }
 
-@keyframes manageCircle {
-  0% {
-  width: 0px;
-    height: 0px;
-  }
-100% {
-  width: 0px;
-    height: 0px;
-}
-}
 
 
 @keyframes perfectCircleFill {
@@ -70,7 +95,7 @@ animation: growCircleFill 1s linear;
   width: 180px;
     height: 180px;
 }
-20%{
+40%{
   width: 0px;
     height: 0px;
 }
@@ -107,10 +132,6 @@ animation: growCircleFill 1s linear;
   background: radial-gradient(circle, rgba(255, 0, 0, 0.5), rgb(255,0,0));
   width: 60px;
     height: 60px;
-}
-20%{
-  /* width: 0px;
-    height: 0px; */
 }
 100% {
   background: radial-gradient(circle, rgba(255, 0, 0, 0.5), rgb(255,0,0));
