--- a/fe/grab-front-app/src/pages/singleplay/Singleplay.css
+++ b/fe/grab-front-app/src/pages/singleplay/Singleplay.css
@@ -7,27 +7,22 @@
 body{
   background-color: black
 }
-@keyframes neon {
-  0%,
-  100% {
-    text-shadow: 0 0 1vw #6C1F65, 0 0 3vw #6C1F65, 0 0 10vw #6C1F65, 0 0 10vw #6C1F65, 0 0 .4vw #6C1F65, .5vw .5vw .1vw #6C1F65;
-    color: #FF99FF;
-  }
-  50% {
-    text-shadow: 0 0 .5vw #391035, 0 0 1.5vw #391035, 0 0 5vw #391035, 0 0 5vw #391035, 0 0 .2vw #391035, .5vw .5vw .1vw #391035;
-    color: #955d95;
-  }
-}
 
 
 .containerSingleplay {
-  /* width: 100%; 원하는 디자인에 맞게 너비 조정 */
-  max-width: 1536px; /* 최대 너비를 1536px로 제한 */
-  max-height: 864px;
+  /* width: 100%; */
+  /* max-width: 1536px; */
+  /* max-height: 864px; */
+  margin: auto;
+  width: 1200px;
   color: #FF99FF;
-  text-align: center;
+  position: absolute; /* 절대 위치 설정 */
+  top: 40%; /* 상단 위치를 화면 세로 중앙으로 설정 */
+  left: 50%; /* 왼쪽 위치를 화면 가로 중앙으로 설정 */
+  transform: translate(-50%, -50%); /* 좌상단 모서리를 중앙으로 이동 */
+  /* text-align: center; */
 }
-.titleSingleplay{
+.titleSingleplayNoAnim{
   color: #FF99FF;
   font-family: 'Press Start 2P';
   font-size: 400%;
@@ -35,9 +30,6 @@ body{
   margin: 10px;
   margin-top: 0%; /* 선택 사항: 요소들 사이에 마진 추가 */
   padding: 10px;
-  animation: neon 1s ease infinite;
-  -moz-animation: neon 1s ease infinite;
-  -webkit-animation: neon 1s ease infinite;
 }
 
 #videoZone {
@@ -68,10 +60,51 @@ width: 800px;
 aspect-ratio: 16/9;
 border: 2.5px solid #ff99ff;
 border-radius: 10px;
-margin-left: 6%;
+/* margin-left: 6%; */
 align-content: center;
 display: flex;
 justify-content: center;
 position: relative; /* 부모 요소에 position: relative; 설정 */
 
+}
+
+.backbutton{
+  font-family: 'Press Start 2P';
+  font-size: 40px;
+  padding: 20px; /* 선택 사항: 요소들 사이에 마진 추가 */
+  margin: 20px;
+  background-color: transparent;
+  border-color: transparent;
+  /* 텍스트의 테두리 색상 설정 */
+  -webkit-text-stroke: 1px #FF99FF;
+  display: inline-flex; /* 가운데 정렬을 위해 inline-flex로 변경 */
+    align-items: center; /* 수직 가운데 정렬 */
+    justify-content: center; /* 수평 가운데 정렬 */
+}
+.backbutton:hover{
+  fill: #FF99FF;
+    color: #FF99FF;
+    filter: drop-shadow(0px 0px 10px #FF99FF);
+    text-shadow:  0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
+}
+
+.scoreBox{
+  padding-left: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center; /* 자식 요소를 왼쪽으로 정렬 */
+}
+
+.gameBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.songTitle{
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
