--- a/fe/grab-front-app/src/components/MusicCard.css
+++ b/fe/grab-front-app/src/components/MusicCard.css
@@ -1,15 +1,12 @@
 .sliderContainer {
     /* Set the desired width and height of the slider container. You can adjust these values based on your requirement. */
     width: 30%;
-    height: 400px;
+    height: 550px;
     margin: 0 auto; /* Center the container horizontally on the screen. You can adjust the margin as needed. */
     overflow: hidden; /* Hide any content that overflows the container. */
   }
   .musicCard {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    transition: box-shadow 0.9s ease;
+
   }
   
   .musicCard:hover {
@@ -33,9 +30,24 @@
 }
 
 .custom-prev-arrow {
-  left: 10px;
+  left: 5px;
+}
+.custom-next-arrow {
+  right: 5px;
+}
+/* .custom-prev-arrow:hover {
+  box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
 }
 
-.custom-next-arrow {
-  right: 10px;
+.custom-next-arrow:hover {
+  box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
+} */
+
+.musicCardBackground{
+  width: 300px;
+}
+
+img {
+  margin: auto;
+  display: block;
 }
