--- a/fe/grab-front-app/src/pages/singleplaywaiting/SingleplayWaiting.css
+++ b/fe/grab-front-app/src/pages/singleplaywaiting/SingleplayWaiting.css
@@ -1,85 +1,103 @@
 @font-face {
-    font-family: "Press Start 2P";
-    font-style: normal;
-    font-weight: normal;
-    src: url("../../Fonts/PressStart2P-Regular.ttf") format("truetype"); 
-  }
-  body{
-    background-color: black
-  }
-  @keyframes neon {
-    0%,
-    100% {
-      text-shadow: 0 0 1vw #6C1F65, 0 0 3vw #6C1F65, 0 0 10vw #6C1F65, 0 0 10vw #6C1F65, 0 0 .4vw #6C1F65, .5vw .5vw .1vw #6C1F65;
-      color: #FF99FF;
-    }
-    50% {
-      text-shadow: 0 0 .5vw #391035, 0 0 1.5vw #391035, 0 0 5vw #391035, 0 0 5vw #391035, 0 0 .2vw #391035, .5vw .5vw .1vw #391035;
-      color: #955d95;
-    }
-  }
-  
-  
-  .containerSingleplayWaiting {
-    
-    /* width: 100%; 원하는 디자인에 맞게 너비 조정 */
-    max-width: 1536px; /* 최대 너비를 1536px로 제한 */
-    max-height: 864px;
-    color: #FF99FF;
-    text-align: center;
-  }
-  .titleSingleplayWaiting{
-    color: #FF99FF;
-    font-family: 'Press Start 2P';
-    font-size: 400%;
-    line-height: 100px;
-    margin: 10px;
-    margin-top: 0%; /* 선택 사항: 요소들 사이에 마진 추가 */
-    padding: 10px;
-    animation: neon 1s ease infinite;
-    -moz-animation: neon 1s ease infinite;
-    -webkit-animation: neon 1s ease infinite;
-  }
-  
-  #videoZoneWaiting {
-  height: 100%;
-  clear: both;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  filter: contrast(100.0) brightness(0.0) grayscale(100%);
-  z-index: -2;
-  position: absolute;
-  
-  }
-  #canvasZoneWaiting {
-  height: 100%;
-  clear: both;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  z-index: -1;
-  
-  position: absolute;
-  
-  }
-  
-  .gameContainerWaiting {
+  font-family: "Press Start 2P";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../../Fonts/PressStart2P-Regular.ttf") format("truetype"); 
+}
 
-  width: 800px;
-  aspect-ratio: 16/9;
-  border: 2.5px solid #ff99ff;
-  border-radius: 10px;
+@keyframes neon {
+  0%,
+  100% {
+    text-shadow: 0 0 1vw #6C1F65, 0 0 3vw #6C1F65, 0 0 10vw #6C1F65, 0 0 10vw #6C1F65, 0 0 .4vw #6C1F65, .5vw .5vw .1vw #6C1F65;
+    color: #FF99FF;
+  }
+  50% {
+    text-shadow: 0 0 .5vw #391035, 0 0 1.5vw #391035, 0 0 5vw #391035, 0 0 5vw #391035, 0 0 .2vw #391035, .5vw .5vw .1vw #391035;
+    color: #955d95;
+  }
+}
+body{
+  color: #FF99FF;
+  font-family: 'Press Start 2P';
+}
+
+.containerSingleplayWaiting {
+  
+  /* width: 100%; 원하는 디자인에 맞게 너비 조정 */
+  max-width: 1536px; /* 최대 너비를 1536px로 제한 */
+  max-height: 864px;
+  text-align: center;
+}
+.titleSingleplayWaiting{
+  color: #FF99FF;
+  font-family: 'Press Start 2P';
+  font-size: 400%;
+  line-height: 100px;
+  margin: 10px;
+  margin-top: 0%; /* 선택 사항: 요소들 사이에 마진 추가 */
+  padding: 10px;
+  animation: neon 1s ease infinite;
+  -moz-animation: neon 1s ease infinite;
+  -webkit-animation: neon 1s ease infinite;
+}
+.camandmessagebox{
   margin-left: 6%;
-  align-content: center;
-  display: flex;
-  justify-content: center;
-  position: relative; /* 부모 요소에 position: relative; 설정 */
-  
-  }
+}
+#videoZoneWaiting {
+height: 100%;
+clear: both;
+transform: rotateY(180deg);
+-webkit-transform: rotateY(180deg);
+-moz-transform: rotateY(180deg);
+filter: contrast(100.0) brightness(0.0) grayscale(100%);
+z-index: -2;
+position: absolute;
 
+}
+#canvasZoneWaiting {
+height: 100%;
+clear: both;
+transform: rotateY(180deg);
+-webkit-transform: rotateY(180deg);
+-moz-transform: rotateY(180deg);
+z-index: -1;
 
+position: absolute;
+
+}
+
+.gameContainerWaiting {
+
+width: 800px;
+aspect-ratio: 16/9;
+border: 2.5px solid #ff99ff;
+border-radius: 10px;
+align-content: center;
+display: flex;
+justify-content: center;
+position: relative; /* 부모 요소에 position: relative; 설정 */
+
+}
+.startbutton{
+  font-family: 'Press Start 2P';
+  font-size: 300%;
+  color: #FF99FF;
+  background-color: transparent;
+  border-color: #FF99FF;
+  border-style: solid;
+  border-width: 4px;
+  border-radius:10px;
+  width: 30%;
+  height: 0%;
+  margin: 1%;
+}
+.startbutton:hover{
+  color: #6C1F65;
+  background-color: #FF99FF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
+  box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
+}
 /* .custom-prev-arrow:hover,
 .custom-next-arrow:hover {
-  background-color: #f0f0f0;
+background-color: #f0f0f0;
 } */
