--- a/fe/grab-front-app/src/webSocket/client/client.css
+++ b/fe/grab-front-app/src/webSocket/client/client.css
@@ -14,7 +14,7 @@
   
   }
   .chatlogbox{
-    width: calc(100% - 4.8px); /* 스크롤바의 너비가 15px로 가정 */
+    width: 100%; /* 스크롤바의 너비가 15px로 가정 */
     display: flex;
     flex-direction: column; /* 세로 방향으로 아래로 쌓이게 함 */
     align-items: flex-start; /* 채팅로그를 왼쪽에 정렬합니다 */
@@ -23,7 +23,6 @@
     border-color: #FF99FF;
     border-style: solid;
     border-radius: 10px;
-    margin-left: 6%;
     overflow-y: auto; /* 스크롤을 사용하여 메시지를 볼 수 있도록 함 */
     max-height: 200px; /* 스크롤 높이를 제한하여 너무 많은 메시지가 쌓이는 것을 방지 */
     
@@ -42,7 +41,6 @@
   }
   .messagebox{
     margin-top: 0%;
-    margin-left: 6%;
     font-family: 'Press Start 2P';
     font-size: 13px;
     color: #FF99FF;
@@ -52,7 +50,7 @@
     border-radius: 10px;
     background-color: transparent;
     outline: none;
-    width: 100%;
+    width: calc(100% + 4.8px);
     aspect-ratio: 100/4;
     box-sizing: border-box;
   }
