--- a/fe/grab-front-app/src/pages/singleplaywaiting/SingleplayWaiting.css
+++ b/fe/grab-front-app/src/pages/singleplaywaiting/SingleplayWaiting.css
@@ -42,6 +42,20 @@ body{
 }
 .camandmessagebox{
   margin-left: 6%;
+  height: 700px;
+  width: 1600px;
+}
+.subContainer{
+  height: 650px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.mainSection{
+  display: flex;
+  flex-direction: column;
+  
 }
 #videoZoneWaiting {
 height: 100%;
@@ -87,9 +101,10 @@ position: relative; /* 부모 요소에 position: relative; 설정 */
   border-style: solid;
   border-width: 4px;
   border-radius:10px;
-  width: 30%;
-  height: 0%;
-  margin: 1%;
+  width: 300px;
+  height:100px;
+  margin: auto;
+  
 }
 .startbutton:hover{
   color: #6C1F65;
