--- a/fe/grab-front-app/src/pages/singleplayjoin/SingleplayJoin.css
+++ b/fe/grab-front-app/src/pages/singleplayjoin/SingleplayJoin.css
@@ -2,7 +2,7 @@
     font-family: "Press Start 2P";
     font-style: normal;
     font-weight: normal;
-    src: url("../../Fonts/PressStart2P-Regular.ttf") format("truetype"); 
+    src: url("Fonts/PressStart2P-Regular.ttf") format("truetype"); 
   }
   body{
     background-color: black
@@ -20,14 +20,14 @@
   }
 
 
-.containerSingleplay {
+.containerSingleplayJoin {
     width: 100%; /* 원하는 디자인에 맞게 너비 조정 */
     max-width: 1536px; /* 최대 너비를 1536px로 제한 */
     max-height: 864px;
     color: #FF99FF;
     text-align: center;
 }
-.titleSingleplay{
+.titleSingleplayJoin{
     color: #FF99FF;
     font-family: 'Press Start 2P';
     font-size: 400%;
@@ -38,4 +38,49 @@
     animation: neon 1s ease infinite;
     -moz-animation: neon 1s ease infinite;
     -webkit-animation: neon 1s ease infinite;
+}
+
+.backbuttonSingleplayJoin
+{
+    font-family: 'Press Start 2P';
+    font-size: 40px;
+    padding: 20px; /* 선택 사항: 요소들 사이에 마진 추가 */
+    margin: 20px;
+    background-color: transparent;
+    border-color: transparent;
+    /* 텍스트의 테두리 색상 설정 */
+    -webkit-text-stroke: 1px #FF99FF;
+}
+.backbuttonSingleplayJoin{
+    display: inline-flex; /* 가운데 정렬을 위해 inline-flex로 변경 */
+    align-items: center; /* 수직 가운데 정렬 */
+    justify-content: center; /* 수평 가운데 정렬 */
+}
+.backbuttonSingleplayJoin:hover{
+    fill: #FF99FF;
+    color: #FF99FF;
+    filter: drop-shadow(0px 0px 10px #FF99FF);
+    text-shadow:  0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
+}
+
+.joinbuttonSingleplayJoin{
+  font-family: 'Press Start 2P';
+  font-size: 300%;
+  color: #FF99FF;
+  background-color: transparent;
+  border-color: #FF99FF;
+  border-style: solid;
+  border-width: 4px;
+  border-radius:10px;
+  width: 300px;
+  height:100px;
+  margin: auto;
+  
+}
+
+.joinbuttonSingleplayJoin:hover{
+  color: #6C1F65;
+  background-color: #FF99FF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
+  box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
 }
