--- a/fe/grab-front-app/src/pages/singleplay/Singleplay.css
+++ b/fe/grab-front-app/src/pages/singleplay/Singleplay.css
@@ -2,7 +2,7 @@
   font-family: "Press Start 2P";
   font-style: normal;
   font-weight: normal;
-  src: url("../../Fonts/PressStart2P-Regular.ttf") format("truetype"); 
+  src: url("Fonts/PressStart2P-Regular.ttf") format("truetype"); 
 }
 
 @keyframes neon {
@@ -40,19 +40,17 @@ body{
   -moz-animation: neon 1s ease infinite;
   -webkit-animation: neon 1s ease infinite;
 }
-.camandmessageboxSingleplay{
+.camandmessagebox{
   margin-left: 6%;
-  height: 700px;
-  width: 1600px;
 }
-.subContainerSingleplay{
-  height: 650px;
-  width: 500px;
+.subContainer{
+  height: 570px;
+  width: 450px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
-.mainSectionSingleplay{
+.mainSection{
   display: flex;
   flex-direction: column;
   
@@ -80,9 +78,9 @@ position: absolute;
 
 }
 
-.gameContainerWaitingSingleplay {
+.gameContainerWaiting {
 
-width: 800px;
+width: 950px;
 aspect-ratio: 16/9;
 border: 2.5px solid #ff99ff;
 border-radius: 10px;
@@ -92,7 +90,7 @@ justify-content: center;
 position: relative; /* 부모 요소에 position: relative; 설정 */
 
 }
-.startbuttonSingleplay{
+.startbutton{
   font-family: 'Press Start 2P';
   font-size: 300%;
   color: #FF99FF;
@@ -104,9 +102,39 @@ position: relative; /* 부모 요소에 position: relative; 설정 */
   width: 300px;
   height:100px;
   margin: auto;
-  
 }
-.startbuttonSingleplay:hover{
+.startbutton:hover{
+  color: #6C1F65;
+  background-color: #FF99FF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
+  box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
+}
+
+.scoreBox{
+  width: 30%;
+}
+.perfect,
+.good,
+.failed,
+.highestcombo,
+.currentcombo{
+  padding: 7%;
+}
+
+#gamequit{
+  font-family: 'Press Start 2P';
+  font-size: 300%;
+  color: #FF99FF;
+  background-color: transparent;
+  border-color: #FF99FF;
+  border-style: solid;
+  border-width: 4px;
+  border-radius:10px;
+  width: 70%;
+  height: 20%;
+  margin-top: 10%;
+}
+#gamequit:hover{
   color: #6C1F65;
   background-color: #FF99FF;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
