fix: 싱글노래 수정(#75)

--- a/fe/grab-front-app/src/pages/loading/Loading.css
+++ b/fe/grab-front-app/src/pages/loading/Loading.css
@@ -1,11 +1,28 @@
+@font-face {
+  font-family: "Press Start 2P";
+  font-style: normal;
+  font-weight: normal;
+  src: url("Fonts/PressStart2P-Regular.ttf") format("truetype"); 
+}
 
+@keyframes neon {
+  0%,
+  100% {
+    text-shadow: 0 0 1vw #6C1F65, 0 0 3vw #6C1F65, 0 0 10vw #6C1F65, 0 0 10vw #6C1F65, 0 0 .4vw #6C1F65, .5vw .5vw .1vw #6C1F65;
+    color: #FF99FF;
+  }
+  50% {
+    text-shadow: 0 0 .5vw #391035, 0 0 1.5vw #391035, 0 0 5vw #391035, 0 0 5vw #391035, 0 0 .2vw #391035, .5vw .5vw .1vw #391035;
+    color: #955d95;
+  }
+}
 .LoadingBox {
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #37474F;
+    background-color: black;
     margin: 0;
   }
   
@@ -16,8 +33,8 @@
       width: 200px;
     }
     h3 {
-      font-family: sans-serif;
-      color: #cdfff8;
+      font-family: Press Start 2P;
+      color: #ff99ff;
       text-align: center;
     }
     svg {
@@ -25,17 +42,18 @@
     }
     
     h3 {
-      text-shadow: 1px 1px 5px #cdfff8;
+      text-shadow: 1px 1px 5px #ff99ff;
     }
   
     .cls-1 {
-      fill: #cdfff8;
+      fill: #ff99ff;
     }
     
     .cls-2 {
-      fill: #cdfff8;
+      fill: #ff99ff;
     }
   
     .cls-3 {
-      fill:#cdfff8;
+      fill:#ff99ff;
     }
+
