--- a/fe/grab-front-app/src/pages/singleresult/SingleplayResult.css
+++ b/fe/grab-front-app/src/pages/singleresult/SingleplayResult.css
@@ -2,7 +2,7 @@
     font-family: "Press Start 2P";
     font-style: normal;
     font-weight: normal;
-    src: url("../../Fonts/PressStart2P-Regular.ttf") format("truetype"); 
+    src: url("Fonts/PressStart2P-Regular.ttf") format("truetype"); 
   }
   @keyframes neon {
     0%,
