--- a/fe/grab-front-app/src/pages/multiplay/MultiplayWaiting.css
+++ b/fe/grab-front-app/src/pages/multiplay/MultiplayWaiting.css
@@ -3,11 +3,11 @@
     font-style: normal;
     font-weight: normal;
     src: url("Fonts/PressStart2P-Regular.ttf") format("truetype"); 
-  }
+}
   
-  @keyframes neon {
-    0%,
-    100% {
+@keyframes neon {
+	0%,
+	100% {
       text-shadow: 0 0 1vw #6C1F65, 0 0 3vw #6C1F65, 0 0 10vw #6C1F65, 0 0 10vw #6C1F65, 0 0 .4vw #6C1F65, .5vw .5vw .1vw #6C1F65;
       color: #FF99FF;
     }
@@ -15,25 +15,27 @@
       text-shadow: 0 0 .5vw #391035, 0 0 1.5vw #391035, 0 0 5vw #391035, 0 0 5vw #391035, 0 0 .2vw #391035, .5vw .5vw .1vw #391035;
       color: #955d95;
     }
-  }
-  body{
+}
+body{
     color: #FF99FF;
     font-family: 'Press Start 2P';
-  }
+}
   
-  .containerMultiplay {
+.containerMultiplay {
     
     /* width: 100%; 원하는 디자인에 맞게 너비 조정 */
     max-width: 1536px; /* 최대 너비를 1536px로 제한 */
     max-height: 864px;
     text-align: center;
-  }
-  .roominfo{
+}
+
+.roominfo{
     position: fixed;
     top:0px;
     right: 0px;
-  }
-  .TitleMultiplay{
+}
+
+.TitleMultiplay{
     color: #FF99FF;
     font-family: 'Press Start 2P';
     font-size: 400%;
@@ -44,65 +46,62 @@
     animation: neon 1s ease infinite;
     -moz-animation: neon 1s ease infinite;
     -webkit-animation: neon 1s ease infinite;
-  }
-  .cambox{
+}
+
+.cambox{
     border: 2.5px solid #ff99ff;
     border-radius: 10px;
     aspect-ratio: 16/9;
+}
 
-  }
-  .camandmessagebox{
+.camandmessagebox{
     margin-left: 6%;
-  }
-  .subContainer{
+}
+
+.subContainer{
     height: 570px;
     width: 450px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-  }
-  .mainSection{
+}
+
+.mainSection{
     display: flex;
     flex-direction: column;
-
 }
     
-  #videoZoneWaiting {
-  height: 100%;
-  clear: both;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  filter: contrast(100.0) brightness(0.0) grayscale(100%);
-  z-index: -2;
-  position: absolute;
+#videoZoneWaiting {
+	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	filter: contrast(100.0) brightness(0.0) grayscale(100%);
+	z-index: -2;
+	position: absolute;
   
-  }
-  #canvasZoneWaiting {
-  height: 100%;
-  clear: both;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  z-index: -1;
+}
+
+#canvasZoneWaiting {
+	height: 100%;
+	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	z-index: -1;
+	position: absolute;
+	border: 1px solid #FF99FF;
+}
   
-  position: absolute;
-  
-  }
-  
-  .gameContainerWaiting {
-  
-  width: 950px;
-  aspect-ratio: 16/9;
-  border: 2.5px solid #ff99ff;
-  border-radius: 10px;
-  align-content: center;
-  display: flex;
-  justify-content: center;
-  position: relative; /* 부모 요소에 position: relative; 설정 */
-  
-  }
-  .startbutton{
+.gameContainerWaiting {
+	width: 950px;
+	aspect-ratio: 16/9;
+	border: 2.5px solid #ff99ff;
+	border-radius: 10px;
+	align-content: center;
+	display: flex;
+	justify-content: center;
+}
+
+.startbutton{
     font-family: 'Press Start 2P';
     font-size: 300%;
     color: #FF99FF;
@@ -114,26 +113,28 @@
     width: 300px;
     height:100px;
     margin: auto;
-  }
-  .startbutton:hover{
+}
+
+.startbutton:hover{
     color: #6C1F65;
     background-color: #FF99FF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
     box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
-  }
+}
   
-  .scoreBox{
+.scoreBox{
     width: 30%;
-  }
-  .perfect,
-  .good,
-  .failed,
-  .highestcombo,
-  .currentcombo{
+}
+
+.perfect,
+.good,
+.failed,
+.highestcombo,
+.currentcombo{
     padding: 7%;
-  }
+}
   
-  #gamequit{
+#gamequit{
     font-family: 'Press Start 2P';
     font-size: 300%;
     color: #FF99FF;
@@ -145,15 +146,16 @@
     width: 70%;
     height: 20%;
     margin-top: 10%;
-  }
-  #gamequit:hover{
+}
+#gamequit:hover{
     color: #6C1F65;
     background-color: #FF99FF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
     box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
-  }
-  /* .custom-prev-arrow:hover,
-  .custom-next-arrow:hover {
-  background-color: #f0f0f0;
-  } */
+}
+
+/* .custom-prev-arrow:hover,
+.custom-next-arrow:hover {
+background-color: #f0f0f0;
+} */
   
