--- a/fe/grab-front-app/src/pages/loading/Loading.css
+++ b/fe/grab-front-app/src/pages/loading/Loading.css
@@ -17,13 +17,16 @@
   }
 }
 .LoadingBox {
-    height: 100vh;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: black;
     margin: 0;
+    z-index: 10;
   }
   
     #outer {
