--- a/fe/grab-front-app/src/pages/multiplayresult/MultiplayResult.css
+++ b/fe/grab-front-app/src/pages/multiplayresult/MultiplayResult.css
@@ -22,16 +22,16 @@ body{
     font-family: 'Press Start 2P';
 
 }
-.resultcontainer{
+.resultcontainermulti{
     margin-left: 6%;
     margin-right: 6%;
     height: 650px;
 }
-.resulttitle{
+.resulttitlemulti{
     color: #FF99FF;
     font-size: 400%;
 }
-.scoreboard{
+.scoreboardmulti{
     border-color: #FF99FF;
     border-style: solid;
     border-radius: 10px;
@@ -39,7 +39,7 @@ body{
     position: relative; /* Added */
 
 }
-.scoreinfo{
+.scoreinfomulti{
     margin-top: 0.9%;
     margin-left: 1%;
     margin-right: 1%;
@@ -51,7 +51,17 @@ body{
     display: flex;
     align-items: center;
 }
-.scorebox{
+
+.gameinfomulti{
+    margin-top: 0.9%;
+    margin-left: 1%;
+    margin-right: 1%;
+    height: 6%;
+    display: flex;
+    align-items: center;
+
+}
+.scoreboxmulti{
     margin-top: 0.9%;
     margin-left: 1%;
     margin-right: 1%;
@@ -59,35 +69,32 @@ body{
     border-style: solid;
 
 }
-.comboinfo{
+.comboinfomulti{
     display: flex;
     margin-left: 1.1%;
     margin-right: 1%;
     width: 55%;
-    height: 40%;
+    height: 300px;
     border-color: #FF99FF;
     border-style: solid;
     border-radius: 10px;
     position: absolute;
     bottom: 1.7%;
 }
-.imagearea{
+.imageareamulti{
     border-color: #FF99FF;
-    border-style: solid;
-    margin-left: 1.1%;
-    margin-top: 1%;
     width: 50%;
-
 }
-.comboarea{
-    border-color: #FF99FF;
-    border-style: solid;
-    margin-left: 1.1%;
-    margin-top: 1%;
-    width: 50%;
-
+.comboareamulti{
+    font-size: 23px;
+    margin: auto;
+    width: 500px;
 }
-.rankarea{    
+.s{
+    padding: 3%;
+}
+
+.rankareamulti{    
     border-color: #FF99FF;
     border-style: solid;
     position: absolute; /* Added */
@@ -98,7 +105,7 @@ body{
     right: 1.1%; /* Added */
 
 }
-.quitbutton{
+.quitbuttonmulti{
     font-family: 'Press Start 2P';
     font-size: 300%;
     color: #FF99FF;
@@ -106,27 +113,28 @@ body{
     border-color: #FF99FF;
     border-style: solid;
     border-radius:10px;
+    border-width: 4px;
     width: 30%;
     height: 20%;
     margin: 1%;
     position: absolute; /* Added */
-    bottom: 1.7%; /* Added */
+    bottom: 0%; /* Added */
     right: 1.1%; /* Added */
 }
-.quitbutton:hover{
+.quitbuttonmulti:hover{
     color: #6C1F65;
     background-color: #FF99FF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
     box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
 }
 
-.scoreinfo {
+.scoreinfomulti {
     display: flex;
     justify-content: space-between;
     /* 추가적인 스타일링을 원하면 여기에 추가 */
   }
   
-  .rank, .username, .score, .point {
+  .rankmulti, .usernamemulti, .scoremulti, .pointmulti {
     /* 각 요소들에 대한 스타일링을 설정 */
     flex: 1; /* 각 요소를 동일한 폭으로 설정 */
     /* 필요한 스타일을 추가 */
