feat:멀티화면디자(#95)

--- a/fe/grab-front-app/src/pages/singleplay/Singleplay.css
+++ b/fe/grab-front-app/src/pages/singleplay/Singleplay.css
@@ -55,9 +55,10 @@ body{
 transform: rotateY(180deg);
 -webkit-transform: rotateY(180deg);
 -moz-transform: rotateY(180deg);
-filter: contrast(100.0) brightness(0.0) grayscale(100%);
+filter: contrast(100.0) brightness(0.2) grayscale(100%);
 z-index: -2;
 position: absolute;
+height: 0px;
 }
 
 #canvasZoneWaiting {
