--- a/fe/grab-front-app/src/pages/multiplay/MultiplayWaiting.css
+++ b/fe/grab-front-app/src/pages/multiplay/MultiplayWaiting.css
@@ -38,19 +38,25 @@ body{
 .TitleMultiplay{
     color: #FF99FF;
     font-family: 'Press Start 2P';
-    font-size: 400%;
-    line-height: 100px;
-    margin: 10px;
-    margin-top: 0%; /* 선택 사항: 요소들 사이에 마진 추가 */
-    padding: 10px;
+    font-size: 300%;
+    margin-bottom: 6%; /* 선택 사항: 요소들 사이에 마진 추가 */
     animation: neon 1s ease infinite;
     -moz-animation: neon 1s ease infinite;
     -webkit-animation: neon 1s ease infinite;
 }
-
+.containermulti{
+    width: 950px;
+	aspect-ratio: 16/9;
+	border: 2.5px solid #ff99ff;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .cambox{
     border: 2.5px solid #ff99ff;
     border-radius: 10px;
+    width: 313.4px;
     aspect-ratio: 16/9;
 }
 
@@ -59,15 +65,17 @@ body{
 }
 
 .camandmessagebox{
-    margin-left: 6%;
+    margin-left: 4%;
 }
 
-.subContainer{
+.subContainermulti{
     height: 570px;
     width: 450px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    margin-top: 6%;
+    margin-left: 2%;
 }
 
 .mainSection{
@@ -124,7 +132,7 @@ body{
 	justify-content: center;
 }
 
-.startbutton{
+.startbuttonmulti{
     font-family: 'Press Start 2P';
     font-size: 300%;
     color: #FF99FF;
@@ -134,19 +142,20 @@ body{
     border-width: 4px;
     border-radius:10px;
     width: 300px;
-    height:100px;
+    height: 2000px;
     margin: auto;
 }
 
-.startbutton:hover{
+.startbuttonmulti:hover{
     color: #6C1F65;
     background-color: #FF99FF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
     box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
 }
   
-.scoreBox{
+.scoreBoxmulti{
     width: 30%;
+    margin-top: 181px;
 }
 
 .perfect,
@@ -157,9 +166,9 @@ body{
     padding: 7%;
 }
   
-#gamequit{
+#gamequitmulti{
     font-family: 'Press Start 2P';
-    font-size: 300%;
+    font-size: 250%;
     color: #FF99FF;
     background-color: transparent;
     border-color: #FF99FF;
@@ -167,10 +176,10 @@ body{
     border-width: 4px;
     border-radius:10px;
     width: 70%;
-    height: 20%;
+    height: 75px;
     margin-top: 10%;
 }
-#gamequit:hover{
+#gamequitmulti:hover{
     color: #6C1F65;
     background-color: #FF99FF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
