--- a/fe/grab-front-app/src/pages/multiplayjoin/MultiplayJoin.css
+++ b/fe/grab-front-app/src/pages/multiplayjoin/MultiplayJoin.css
@@ -63,7 +63,7 @@
     text-shadow:  0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
 }
 
-.joinbuttonSingleplayJoin{
+.joinbuttonMultiplayJoin{
   font-family: 'Press Start 2P';
   font-size: 300%;
   color: #FF99FF;
@@ -72,15 +72,16 @@
   border-style: solid;
   border-width: 4px;
   border-radius:10px;
-  width: 300px;
+  width: 25%;
   height:100px;
   margin: auto;
   
 }
 
-.joinbuttonSingleplayJoin:hover{
+.joinbuttonMultiplayJoin:hover{
   color: #6C1F65;
   background-color: #FF99FF;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4536px #FF99FF, 0px 0px 2592px #FF99FF, 0px 0px 1512px #FF99FF, 0px 0px 756px #FF99FF, 0px 0px 216px #FF99FF, 0px 0px 108px #FF99FF;
   box-shadow: 0px 0px 75.6px #FF99FF, 0px 0px 43.2px #FF99FF, 0px 0px 25.2px #FF99FF, 0px 0px 12.6px #FF99FF, 0px 0px 3.6px #FF99FF, 0px 0px 1.8px #FF99FF;
+  
 }
