--- a/fe/grab-front-app/src/pages/multiplayjoin/MultiplayJoin.css
+++ b/fe/grab-front-app/src/pages/multiplayjoin/MultiplayJoin.css
@@ -72,7 +72,7 @@
   border-style: solid;
   border-width: 4px;
   border-radius:10px;
-  width: 25%;
+  width: 350px;
   height:100px;
   margin: auto;
   
