--- a/fe/grab-front-app/src/components/openVidu2/UserVideo.css
+++ b/fe/grab-front-app/src/components/openVidu2/UserVideo.css
@@ -6,10 +6,10 @@ video {
 }
 .streamcomponent div {
     position: absolute;
-    background: #f8f8f8;
+    background: transparent;
     padding-left: 5px;
     padding-right: 5px;
-    color: #777777;
+    color: #ff99ff;
     font-weight: bold;
     border-bottom-right-radius: 4px;
 }
