--- a/fe/grab-front-app/src/pages/multiplay/MultiplayWaiting.css
+++ b/fe/grab-front-app/src/pages/multiplay/MultiplayWaiting.css
@@ -191,3 +191,9 @@ body{
 background-color: #f0f0f0;
 } */
 
+.playerScores {
+    position: absolute;
+    z-index: 10;
+    padding-left: 10px;
+    padding-top: 210px;
+}
